Removed deprecated Java API usage